@@ -199,6 +199,7 @@
                         --add-exports java.management/sun.management=ALL-UNNAMED
                         --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
                         --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
+                        --add-modules jdk.incubator.vector
                     </argLine>
                     <skipTests>${skipTests}</skipTests>
                     <!--                    <skipTests>${skipUnit}</skipTests>-->
